Delete scrollbar for sidebar. Delete position fixed for header and sidebar. Add scroll for gallery

--- a/source/sass/base/scaffolding.scss
+++ b/source/sass/base/scaffolding.scss
@@ -40,3 +40,9 @@ a {
   clip: rect(0 0 0 0);
   overflow: hidden;
 }
+
+.fixed {
+  position: fixed;
+  top: 90px;
+  z-index: 2;
+}
